# video-tutorial-python-code

./: .gitignore  README.md
Babel/1-locale-data/: app.py
Babel/2-date-and-time/: app.py  requirements.txt
Babel/3-number-formatting/: app.py
Configparser/1-basic-configparser-learn-to-wirte-you-own-config-file/: app.py  config.ini
Configparser/2-read-config.ini-file-and-use-the-data-from-the-config-file/: app.py  requirements.txt
Configparser/3-working-with-data-types-in-config-parser/: app.py  config.ini
Django/10-basic-working-with-data-model-in-django/: requirements.txt
Falcon/part-1-and-part-2-basic-rest-api/: README.md  app.py
Falcon/part-3-rest-api-request-methods/: README.md  app.py
Falcon/part-4rest-api-json-input-validate-from-client/: README.md
Falcon/part-5-how-to-use-params/: app.py
Falcon/part-6-how-to-use-body-json/: app.py
Falcon/rest-api-json-input-validate-from-client/: app.py
Flask/10-working-with-http-cross-origin-to-allow-external-request/: app.py
Flask/11-basic-web-application-with-flask-and-jinja/: app.py
Flask/12-working-with-middleware-general/: app.py  middleware.py
Flask/13-working-with-middleware-for-specific-route/: app.py  middleware.py
Flask/14-use-class-@staticmethod-function-to-manually-routes/: app.py  helloWorld.py
Flask/7-print-to-console-with-flask-logger/: app.py
Kafka/: .python-version  README.md  consuming.py  docker-compose.yml
Kafka/kui/: config.yml
Poetry/my-first-project/: pyproject.toml
Poetry/my-first-project/src/model/: __init__.py
Poetry/my-first-project/tests/: test_my_func.py
(+255 files in other folders)
