[tool.poetry]
name = "my-first-project"
version = "0.1.0"
description = ""
authors = ["Paris Nakita Kejser <hi@pnk.sh>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
